--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 
     <h1>Gestor de Conceptos</h1>
-    <h2>Agregar conceptos</h2>
+
     <label for="descripcion">Descripción del concepto</label>
     <input type="text" id="descripcion"><br>
     <label for "valor">Valor del concepto en CampCoins</label>
@@ -71,8 +71,9 @@
         </tbody>
     </table>
 
-    <h1>Consignación y descuento</h1>yy
-    <h2>Agregar Campcoins</h2>
+
+
+    <h1>Consignación y descuento</h1>
     <label for="estudiante">Numero de identificacion del estudiante</label>
     <input type="text" id="estudiante"><br>
     <label for="id">Id gestor conceptos para consignación o descuento</label>
