--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <input type="text" id="estudiante"><br>
     <label for="id">Id gestor conceptos para consignación o descuento</label>
     <input type="number" id="id"><br>
-    <button onclick="realizarOperacion()">Cambiar</button>    
+    <button onclick="realizarOperación()">Realizar Operación</button>
 
     <script src="estudiantes.js"></script>
 </body>
